<resources>
    <string name="app_name">Pocket Brain</string>
    <string name="square_root_symbol">\u221a</string>
    <string name="cube_root_symbol">\u221B</string>
    <string name="fourth_root_symbol">\u221a</string>
    <string name="pie_symbol">\u03C0</string>
    <string name="xsquare">x\u00B2</string>
    <string name="xcube">x\u00B3</string>
    <string name="exponent">e\u00B0</string>
    <string name="dividesymbol">x\u246B</string>
    <string name="scientific_calculator">SCIENTIFIC CALCULATOR</string>
    <string name="_0">0</string>
    <string name="x">x!</string>
</resources>
